<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>wang.liangchen.matrix</groupId>
    <artifactId>matrix-framework</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>${project.artifactId}</name>
    <description>A rapid development framework based on springboot,which is distributed, asynchronous non-blocking and reactive
    </description>
    <url>https://github.com/WangLiangChen/matrix-framework</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/WangLiangChen/matrix-framework.git</connection>
        <developerConnection>scm:git:ssh://github.com/WangLiangChen/matrix-framework.git</developerConnection>
        <url>https://github.com/WangLiangChen/matrix-framework</url>
    </scm>

    <developers>
        <developer>
            <id>Liangchen.Wang</id>
            <email>sintrue@hotmail.com</email>
            <name>Liangchen.Wang</name>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <modules>
        <module>matrix-framework-commons</module>
        <module>matrix-framework-core</module>
        <module>matrix-framework-data</module>
        <module>matrix-framework-data-spring-boot-autoconfigure</module>
        <module>matrix-framework-data-spring-boot-starter</module>
        <module>matrix-framework-web</module>
        <module>matrix-framework-web-spring-boot-autoconfigure</module>
        <module>matrix-framework-web-spring-boot-starter</module>
        <module>matrix-framework-ddd</module>
        <module>matrix-framework-generator</module>
    </modules>

    <properties>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss(+8)</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <version.hibernate>7.0.4.Final</version.hibernate>
        <version.springboot>2.7.0</version.springboot>
        <version.servlet>4.0.1</version.servlet>
        <version.matrix>1.0.0-SNAPSHOT</version.matrix>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.springboot}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${version.servlet}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-commons</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-core</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-data</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-data-spring-boot-autoconfigure</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-data-spring-boot-starter</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-web</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-web-spring-boot-autoconfigure</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-web-spring-boot-starter</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-ddd</artifactId>
                <version>${version.matrix}</version>
            </dependency>
            <dependency>
                <groupId>wang.liangchen.matrix</groupId>
                <artifactId>matrix-framework-generator</artifactId>
                <version>${version.matrix}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.properties</include>
                    <include>**/META-INF/*</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.properties</include>
                    <include>**/META-INF/*</include>
                    <include>**/*.sql</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>ossrh</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <keyname>Liangchen.Wang</keyname>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
</project>